# radix-connector-demo

./: .gitignore  .gitmodules  jest.config.ts  package.json  redstone-finance-radix-connector-0.7.3.tgz  tsconfig.json
coverage/: index.html  report.json
coverage/contracts/price_adapter/: PriceAdapterRadixContractAdapter.ts.html  PriceAdapterRadixContractConnector.ts.html  PriceAdapterRadixContractDeployer.ts.html  index.html
coverage/contracts/price_adapter/methods/: GetPricesRadixMethod.ts.html  InstantiateRadixFunction.ts.html  ReadPricesRadixMethod.ts.html  ReadTimestampRadixMethod.ts.html  WritePricesRadixMethod.ts.html  index.html
coverage/methods/: CreateProofOfAmountRadixMethod.ts.html  DepositBatchRadixMethod.ts.html  LockFeeRadixMethod.ts.html  index.html
coverage/radix/: RadixApiClient.ts.html  RadixClient.ts.html  RadixContractAdapter.ts.html  RadixContractConnector.ts.html  RadixInvocation.ts.html  RadixTransaction.ts.html  index.html  utils.ts.html
coverage/radix/parser/: RadixParser.ts.html  index.html
coverage/src/: index.html  index.ts.html  sample-run.ts.html
coverage/src/methods/: CreateProofOfAmountRadixMethod.ts.html  DepositBatchRadixMethod.ts.html  LockFeeRadixMethod.ts.html  index.html
coverage/src/radix/: RadixApiClient.ts.html  RadixClient.ts.html  RadixContractAdapter.ts.html  RadixContractConnector.ts.html  RadixInvocation.ts.html  RadixTransaction.ts.html  index.html  utils.ts.html
demo/: README.md  diagram
demo-1/: Makefile  README.md
demo-2/: README.md  diagram
demo-3/: README.md  diagram
demo-4/: README.md
demo-5/: README.md
payload-generator/: index.ts
scripts/: RadixPackageDeployer.ts  constants.ts  read-XRD.ts  sample_deploy.ts  sample_instantiate.ts  sample_run.ts
scrypto/: Cargo.toml  Makefile  README.md
scrypto/common/: Cargo.toml
scrypto/price_adapter/: Cargo.toml  component.enkinet.addr  component.resim.addr  component.stokenet.addr  package.enkinet.addr  package.resim.addr  package.stokenet.addr
scrypto/rust-sdk/: Cargo.toml  Makefile  README.md
scrypto/rust-sdk/src/crypto/: keccak256.rs  recover.rs
scrypto/rust-sdk/src/network/: as_str.rs  mod.rs
src/: sample-run.ts
src/__mocks__/: GatewayApiClient.ts
src/contracts/price_adapter/: PriceAdapterRadixContractAdapter.ts
src/radix/: RadixInvocation.ts  RadixTransaction.ts
test/: PriceAdapterRadixContractAdapter.spec.ts  PriceAdapterRadixContractConnector.spec.ts  RadixApiClient.spec.ts  e2e.spec.ts  mock-default-values.ts
(+15 files in other folders)
