[package]
name = "price_adapter"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
scrypto = { workspace = true, optional = true }
redstone = { path = "../rust-sdk", default-features = false, optional = true }

[dev-dependencies]
scrypto-test = { workspace = true }

[features]
real_network = ["redstone/crypto_radix", "redstone/network_radix"]
default = ["redstone/crypto_radix", "redstone/network_radix", "redstone/helpers", "redstone/print_debug"]
test_sim_env = ["redstone/print_debug"]

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.scripts]
publish = "resim publish ."
