[package]
name = "redstone"
version = "1.1.0"
edition = "2021"
authors = ["RedStone <https://redstone.finance>"]
description = "A Rust implementation of deserializing&decrypting RedStone payload"

[features]
default = ["pure"]

# Pure Rust, no specific network extension
pure = ["primitive-types"]

# An extension for Radix network
network_radix = ["radix-common", "scrypto"]

# An extension for debug-printing of messages.
print_debug = []

# A variant of decrypting the message-signers using secp256k1 library. Cheaper in runtime.
crypto_secp256k1 = ["secp256k1/recovery", "secp256k1/lowmemory", "secp256k1/alloc"]

# A variant of decrypting the message-signers using k256 library. Cheaper during contract deployment.
crypto_k256 = ["k256/alloc", "k256/sha256", "k256/ecdsa"]

# A variant of decrypting the message-signers using Radix library.
crypto_radix = ["scrypto", "radix-common", "secp256k1/lowmemory", "getrandom/js"]

# A set of helpers for testing & offline usage.
helpers = ["hex/serde", "hex/alloc"]

[dependencies]
radix-common = { workspace = true, default-features = false, features = [], optional = true }
scrypto = { workspace = true, features = ["alloc"], optional = true }
sha3 = { version = "^0.10.8", default-features = false, features = ["asm"] }
k256 = { version = "^0.13.3", default-features = false, features = [], optional = true }
secp256k1 = { version = "^0.28.0", default-features = false, features = [], optional = true }
hex = { version = "^0.4.3", default-features = false, features = [], optional = true }
primitive-types = { version = "^0.13.1", optional = true }
getrandom = { version = "0.2.15", optional = true, default-features = false }

[dev-dependencies]
itertools = { version = "^0.13.0" }
